# adventure

./: .gitignore  README.md  pyproject.toml
adventure/brain/: brain.py  levels.py
adventure/items/: door.py  key.py  torch.py
adventure/lib/: base_obj.py  item.py  living.py  map.py  monster.py  player.py  room.py
adventure/monsters/: guard.py  rat.py
dev_notes/: requirements.md
tests/: test_adventure.py  test_base.py  test_door.py  test_guard.py  test_item.py  test_key.py  test_living.py  test_map.py  test_player_actions.py  test_rat.py  test_room.py  test_torch.py
